# geometry-selector

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py
src/: mm.py
src/geomselect/: __init__.py  euclidean.py  hyperbolic.py  metrics.py  plus.py  preprocessing.py  result.py  selector.py  spherical.py  visualization.py
tests/: test_hyperbolic.py  test_metrics.py  test_plus.py  test_preprocessing.py  test_selector.py  test_selector_curvature.py  test_spherical.py  zzz.py
