[project]
name = "geomselect"
version = "0.1.0"
description = "Geometry selector for distance-based embeddings"
authors = [
    { name = "Dmitry Kozlov" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

demo = [
    "streamlit",
    "plotly",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100