[project]
name = "geomselect"
version = "0.1.0"
description = "Geometry selector for distance-based embeddings"
authors = [
    { name = "Dmitry Kozlov" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

viz = [
    "plotly>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.coverage.run]
source = ["src/geomselect"]
omit = [
    "src/geomselect/visualization.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false